--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/socketio/socket.io"
+    "url": "https://github.com/coda-hq/socket.io"
   },
   "scripts": {
     "lint": "eslint lib/ test/",
