--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "supertest": "^6.0.0"
   },
   "resolutions": {
-    "minimist": "^0.2.1"
+    "minimist": "^0.2.1",
+    "xmlhttprequest-ssl": "1.6.2"
   },
   "contributors": [
     {
